# vipe

./: .gitignore  .pre-commit-config.yaml  BINARY_FORMAT_SPEC.md  MANIFEST.in  MANIFEST_FORMAT_SPEC.md  MODAL_INSTALLATION.md  PACKAGING_CHANGES.md  PACKAGING_COMPLETE.md  QUICK_START_MODAL.md  README.md  THIRD_PARTY_LICENSES.md  VALIDATION_REPORT.txt  WINDOWS_SUPPORT_PR.md  maximum_parallel_pipeline_mp.py  pyproject.toml  run.py  setup.py  test_binary_format.py  test_hybrid_e2e.py  test_hybrid_e2e_slurm.sh  test_hybrid_simple.py  test_hybrid_slurm.sh  test_package_installation.sh  vipe_hybrid_e2e_2974.out  vipe_hybrid_e2e_2975.out
.github/workflows/: ci.yml
configs/pipeline/: default.yaml  motion_aware.yaml  wide_angle.yaml
configs/streams/: frame_dir_stream.yaml  raw_image_sequence_stream.yaml
csrc/lietorch_ext/: lietorch_cpu.cpp  lietorch_gpu.cu  rxso3.h  se3.h  sim3.h  so3.h
csrc/slam_ext/: geom_kernels.cu  slam.cpp
csrc/utils_ext/: knn.cu
docs/: installation.md
docs/reference/: configuration.md
envs/: requirements.in  requirements.txt
scripts/: download_dataset.py  generate_config_docs.py  vipe_to_colmap.py
tests/: test_ba_fused_terms.py  test_ba_triton_kernels.py  test_config.py  test_graph_buffer_fused_ba.py  test_slam_ext_ba_extended.py
vipe/: __init__.py
vipe/cli/: main.py
vipe/config/: parse.py  pipeline.py  slam.py  streams.py  vipe.py
vipe/configs/: __init__.py
vipe/configs/pipeline/: __init__.py  default.yaml  hybrid_metric.yaml
vipe/configs/slam/: __init__.py  default.yaml
vipe/configs/streams/: __init__.py
vipe/ext/: specs.py
vipe/pipeline/: __init__.py  default.py  panorama.py  processors.py
vipe/priors/depth/: __init__.py  hybrid_metric.py  moge.py  scale_optimizer.py
vipe/priors/dynamic_mask/: __init__.py  flow_consistency.py  pipeline.py  sampson.py
vipe/priors/flow/: __init__.py  base.py  sea_raft_model.py
vipe/priors/geocalib/: extractor.py
vipe/priors/track_anything/: __init__.py  aot_tracker.py  detector.py  seg_tracker.py  segmentor.py
vipe/slam/: system.py
vipe/slam/ba/: solver.py  terms.py
vipe/streams/: __init__.py  base.py  raw_image_sequence_stream.py  raw_mp4_stream.py
vipe/tests/: test_hybrid_depth.py
vipe/utils/: depth.py  geometry.py  io.py  meshopt_depth.py  modal_helpers.py  viser.py  visualization.py
vipe_results_hybrid_e2e/intrinsics/: cosmos-example.npz  cosmos-example_camera.txt
vipe_results_hybrid_e2e/mask/: cosmos-example.txt
vipe_results_hybrid_e2e/pose/: cosmos-example.npz
vipe_results_hybrid_e2e/vipe/: cosmos-example_info.pkl
(+40 files in other folders)
